--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -633,7 +633,7 @@ Per riprendere a utilizzare il telefono devi effettuare un ripristino dei dati d
     <string name="wifi_speed">Velocità di collegamento</string>
     <string name="wifi_ip_address">Indirizzo IP</string>
     <string name="wifi_eap_method">Metodo EAP</string>
-    <string name="please_select_phase2">FAse 2 di autenticazione</string>
+    <string name="please_select_phase2">Fase 2 di autenticazione</string>
     <string name="wifi_eap_ca_cert">Certificato CA</string>
     <string name="wifi_eap_user_cert">Certificato utente</string>
     <string name="wifi_eap_identity">Identità</string>
@@ -2151,6 +2151,7 @@ Qualsiasi utente può accettare le autorizzazioni delle applicazioni aggiornate 
     <string name="upload_debug_log_title">Programma esperienza utente</string>
     <string name="upload_debug_log_summary">"Aiuta Xiaomi a migliorare i suoi prodotti ed i suoi servizi inviando dati anonimi di diagnostica e sull'utilizzo"</string>
     <string name="device_miui_version">Versione MIUI</string>
+    <string name="cmcc_hardware_version">Versione Hardware</string>
     <string name="device_cpu">CPU</string>
     <string name="device_memory">RAM</string>
     <string name="device_internal_memory">Memoria interna</string>
@@ -2260,6 +2261,7 @@ Qualsiasi utente può accettare le autorizzazioni delle applicazioni aggiornate 
     <string name="common_settings">Impostazioni rapide</string>
     <string name="battery_settings">Batteria</string>
     <string name="battery_settings_title">Batteria</string>
+    <string name="power_center">Consumo</string>
     <string name="battery_indicator_style">Indicatore batteria</string>
     <string name="power_usage_history">Consumo batteria</string>
     <string name="default_usb_mode">Connessione USB</string>
@@ -2918,33 +2920,4 @@ Disabilitare le finestre flottanti?"</string>
     <string name="location_agps_def_location_mode">MSB</string>
     <string name="wifi_disconnected_notification_title">Wi-Fi disconnessa</string>
     <string name="wifi_disconnected_notification_summary">Non sei connesso alla rete Wi-Fi.</string>
-    <string name="miracast_settings_category">Impostazioni display wireless</string>
-    <string name="miracast_display_category">Display</string>
-    <string name="miracast_menu_search">Ricerca</string>
-    <string name="miracast_menu_searching">Ricerca</string>
-    <string name="miracast_menu_teardown">Scollega</string>
-    <string name="miracast_menu_connect">Avvia la trasmissione</string>
-    <string name="miracast_menu_disconnect">Ferma la trasmissione</string>
-    <string name="miracast_menu_forget">Dimentica display</string>
-    <string name="miracast_menu_rename">Rinomina display</string>
-    <string name="miracast_setup_save">Salva</string>
-    <string name="miracast_setup_cancel">Annulla</string>
-    <string name="miracast_wifi_off">Per usare un display wireles, attiva il Wi-Fi.</string>
-    <string name="miracast_no_sinks_found">Nessun display wireless disponibile.</string>
-    <string name="miracast_nickname">Nome</string>
-    <string name="miracast_connection_failed_generic">La connessione non è riuscita.</string>
-    <string name="miracast_sink_connected">Connesso</string>
-    <string name="miracast_sink_not_available">Non disponibile</string>
-    <string name="miracast_sink_connecting">Connessione in corso…</string>
-    <string name="miracast_sink_ready_to_connect">Pronto per la connessione</string>
-    <string name="miracast_sink_busy">Occupato</string>
-    <string name="miracast_error_already_streaming">Trasmissione già in corso verso un display</string>
-    <string name="miracast_error_connection_in_progress">Connessione in corso. Attendere.</string>
-    <string name="miracast_cancelconnect_dialog">Annulla connessione</string>
-    <string name="miracast_dialog_title">%1$s</string>
-    <string name="miracast_error_cancelconnect">La connessione è attualmente occupata</string>
-    <string name="miracast_search_for_displays">Ricerca di display wireless in corso…</string>
-    <string name="miracast_PC2THOR_streaming_on">Il display wireless non è disponibile perché un PC sta trasmettendo a questo dispositivo.</string>
-    <string name="miracast_disable_dhcp">Disattiva HDCP</string>
-    <string name="miracast_enable_dhcp">Attiva HDCP</string>
 </resources>
