--- a/Italian/main/MiuiHome.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiHome.apk/res/values-it/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<!--This Italia translation is licenced under www.creativecommons.org/licenses/by-nc-nd/3.0/deed.en by MIUI Italia www.miui.it-->
+<!--This Italian translation is licenced under www.creativecommons.org/licenses/by-nc-nd/3.0/deed.en by MIUI Italia www.miui.it-->
     <string name="sharedUserId" />
     <string name="process" />
     <string name="application_name">Launcher di sistema</string>
@@ -15,6 +15,7 @@
     <string name="lock_screen_failed_message">Impossibile applicare</string>
     <string name="lock_screen_success_message">Applicato</string>
     <string name="wallpaper_failed_message">Impossibile applicare lo sfondo</string>
+    <string name="image_too_small_message">"L'immagine originale non è abbastanza grande"</string>
     <string name="wallpaper_success_message">Sfondo applicato con successo</string>
     <string name="is_setting_wallpaper_toast">Applicazione sfondo in corso…</string>
     <string name="current_wallpaper">Attuale</string>
