--- a/Italian/main/Browser.apk/res/values-it/strings.xml
+++ b/Italian/main/Browser.apk/res/values-it/strings.xml
@@ -185,7 +185,6 @@ Sei sicuro di voler abbandonare questa pagina?"</string>
     <string name="pref_ua_title">Gestione user agent</string>
     <string name="pref_ua_string">Stringa user agent</string>
     <string name="pref_ua_mione_entry">Mi One</string>
-    <string name="pref_ua_mione_value">4</string>
     <string name="pref_content_search_engine">Imposta motore di ricerca preferito</string>
     <string name="dump_counters">Dump contatori V8</string>
     <string name="dump_dom_tree">Dump albero DOM su file</string>
@@ -489,7 +488,7 @@ Sei sicuro di voler abbandonare questa pagina?"</string>
     <string name="video_fragment_name_collections">Le mie collezioni</string>
     <string name="video_fragment_name_historys">Cronologia</string>
     <string name="video_fragment_name_offine">Offline</string>
-    <string name="video_group_updates_list">Updates/string>
+    <string name="video_group_updates_list">Updates</string>
     <string name="video_group_noupdates_list">NoUpdates</string>
     <string name="video_download_downloading">In download</string>
     <string name="video_download_downloaded">Scaricati</string>
