--- a/Italian/main/MiuiSystemUI.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiSystemUI.apk/res/values-it/strings.xml
@@ -168,10 +168,10 @@ Se riattivi i dati, l'operatore potrebbe addebitarti un costo."</string>
     <string name="ext_media_mountable_notification_message">Apri media esterno con File Explorer</string>
     <string name="ext_media_safe_remove">Rimozione sicura</string>
     <string name="status_bar_network_flow_today">Oggi: %1$s</string>
-    <string name="status_bar_network_flow">"Oggi: %1$s    Rimanente: %2$s   Limite mensile: %3$s"</string>
-    <string name="status_bar_network_flow_exceed">Oggi: %1$s | Fuori soglia: %3$s | Limite mensile: %4$s</string>
-    <string name="status_bar_network_flow_exceed_to_purchase">Oggi: %1$s&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp; Fuori soglia:&lt;font color=%2$s>%3$s&lt;/font>&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;Acquista ></string>
-    <string name="status_bar_network_flow_warning_to_purchase">"Oggi: %1$s    Rimanente: %2$s    Acquista >"</string>
+    <string name="status_bar_network_flow_content">"Oggi: %1$s    Rimanente: %2$s   Limite mensile: %3$s"</string>
+    <string name="status_bar_network_flow_exceed_content">Oggi: %1$s | Fuori soglia: %3$s | Limite mensile: %4$s</string>
+    <string name="status_bar_network_flow_purchase">"   Acquista >"</string>
+    <string name="status_bar_network_flow_limit">"   Limite mensile: %1$s"</string>
     <string name="drive_mode_tip">Modalità Auto - Guida con prudenza</string>
     <string name="no_notification_tips">Nessuna notifica</string>
     <string name="notification_otg_mouse_in">Mouse connesso</string>
