--- a/Italian/main/MiuiFramework.apk/res/values-it-rIT/strings.xml
+++ b/Italian/main/MiuiFramework.apk/res/values-it-rIT/strings.xml
@@ -37,7 +37,7 @@
     <string name="reboot_confirm_title">Il tuo dispositivo sarà riavviato.</string>
     <string name="reboot_progress">Riavvio in corso…</string>
     <string name="memory_clear_result">"%1$s liberati | %2$s disponibili"</string>
-    <string name="memory_clear_nothing_result">"L'utilizzo della memoria è già ottimizzata."</string>
+    <string name="memory_clear_nothing_result">La memoria è già ottimizzata.</string>
     <string name="device_xiaomi">Telefono Mi</string>
     <string name="device_hongmi">Redmi</string>
     <string name="device_pad">Mi Pad</string>
